# sentiment-sale-prediction-pipeline

./: .gitignore  README.md
reddit_producer/: pyproject.toml
reddit_producer/reddit_producer/: producer.py
reddit_producer/tests/: __init__.py
